Fixed alignment issues

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -27,7 +27,7 @@ footer {
 }
 
 .label {
-  margin: 0 auto auto auto;
+  margin: 3rem auto 0 auto;
   font-weight: bolder;
   font-size: 1.5rem;
 }
